bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: unclosed character literal
var Msg:String = ''
                 ^BDR:2: error: illegal start of simple expression
var Msg:String = ''
                 ^